# backblaze_analytics.py

./: .editorconfig  .gitignore  ReadMe.md  pyproject.toml  throughput_from_batch_size_dependence.ipynb
AutoXGBoost_models/: bestHyperparams.json
JS/: HDD_survival_predictor.user.js
Survival_XGBoost_Models/: bestHyperparams.json
additionalData/: models.tsv
backblaze_analytics/: SMARTAttrsNames.py  __init__.py  __main__.py  analysis.py  augment.py  build_hists.py  database.py  dataset.py  datasetDescription.py  rowidHacks.py
backblaze_analytics/augmenters/: Augmenter.py  Decoder.py  ReadMe.md  TSV.py  __init__.py
backblaze_analytics/core/: Aggregator.py  __init__.py
backblaze_analytics/fitters/: XGBoostCoxPHFitter.py  XGBoostWeibullFitter.py
backblaze_analytics/sql/: analyse_records.sql  create.sql  last_row.sql  normalize_models.sql
backblaze_analytics/tools/: CommandsGenerator.py  DatabaseCommand.py  ImageOutputCommand.py  NeedingOutputDirCommand.py  ReadMe.md  RegressionAnalysis.py  RegressionCLI.py  SevenZipCommand.py  export.py  importer.py  imput.py  nativeImporterCodeGen.py  plotLifeLines.py  preprocess.py  retrieve.py
backblaze_analytics/utils/: PickleCache.py  __init__.py  attrSelectionWidget.py  custom_lists.py  decodeWDModelSeriesModifiers.py  isNotebook.py  mtqdm.py  myTSV.py  reorderPandasDataframeColumns.py  shapTools.py
